fixed weird spacing between tech details label and value

--- a/server/app/assets/stylesheets/shared/cards.scss
+++ b/server/app/assets/stylesheets/shared/cards.scss
@@ -88,7 +88,7 @@
   }
 
   .cards--info-row-value {
-    width: 80%;
+    width: 100%;
   }
 
   .forms--label,
